Bug 115896 - FILEOPEN Shape in table in a DOC appears on wrong side of the page
Summary: FILEOPEN Shape in table in a DOC appears on wrong side of the page
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.0.0
Keywords: filter:doc
: 105971 (view as bug list)
Depends on:
Blocks: DOC-Tables DOC-Shapes layoutInCell
  Show dependency treegraph
 
Reported: 2018-02-21 05:19 UTC by Aron Budea
Modified: 2024-08-26 09:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOC (30.50 KB, application/msword)
2018-02-21 05:19 UTC, Aron Budea
Details
PDF exported from Word (94.97 KB, application/pdf)
2018-02-21 05:20 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2018-02-21 05:19:23 UTC
Created attachment 140029 [details]
Sample DOC

Open the attached DOC. The yellow shape should be near the right edge of the table.

=> It is on the left side instead.

Observed with LO 6.0.1.1 & 3.3.0 / Windows 7.
Comment 1 Aron Budea 2018-02-21 05:20:05 UTC
Created attachment 140030 [details]
PDF exported from Word
Comment 2 Dieter 2018-02-21 07:23:00 UTC
I confirm the described bahaviour in the attached document.

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 77a535285f0fd5f2464430abdc67cf99be024868
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-01-23_23:04:23
Locale: de-DE (de_DE); Calc: CL
Comment 3 QA Administrators 2019-02-22 03:43:37 UTC Comment hidden (obsolete)
Comment 4 Dieter 2019-02-22 10:22:49 UTC
Still repro in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: f42554a1886ebe49170c25096dc3281b2c7bb1f4
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-02-08_22:37:30
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 5 Justin L 2020-04-23 12:24:50 UTC
Easy fix - a new unknown version of Word 2013 (I presume).
I round-tripped the file in Word 2016, and the code thinks it is from Word 2000. OK.

proposed fix at https://gerrit.libreoffice.org/c/core/+/92764
Comment 6 Justin L 2020-04-24 07:16:51 UTC
*** Bug 105971 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2020-04-27 17:20:58 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/561fe03e429a646411f9dc5e17d48a2f38b1db5a

tdf#115896 doc import: recognize new version 2013

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2020-05-04 16:43:37 UTC
Verified with duplicate. 
Great work, Justin.