tdf#115896 doc import: recognize new version 2013

Now, I don't know for sure that E000 is from
Office 2013. I tried round-tripping the unit
test in Office 2016 and it gave the version
number 0x2000.

Change-Id: Ib02f9440de34225affcb2ccbfd96ed89c717085e